Fix CSS bug on Firefox

--- a/public/stylesheets/cruisecontrol.less
+++ b/public/stylesheets/cruisecontrol.less
@@ -545,17 +545,20 @@ button[disabled="disabled"], button[disabled="disabled"]:hover, button[disabled=
 }
  
 .textarea_container {
-	position: relative;
-	width: 100%;
-	height: 350px;
+	display: block;
+	position:relative;
+	height: 300px;   
+    left:0;
+    right:0;
+    margin-top:0px;
+    margin-bottom:10px;
+    margin-right:10px;
+    margin-left:10px;
 }
 
 .textarea_container .textarea {
-	position: absolute;
-	left: 20px;
-	right: 20px;
-	top: 10px;
-	bottom: 10px;
+	width: 100%;
+	height: 100%;
 }
 
 #new_project {
